# Stochastax

./: .gitignore  README.md  pyproject.toml
examples/: logode_sphere.py  mkw_sphere.py
stochastax/: __init__.py  tensor_ops.py  types.py
stochastax/control_lifts/: __init__.py  branched_signature_ito.py  log_signature.py  path_signature.py  signature_types.py
stochastax/controls/: __init__.py  drivers.py  paths_types.py
stochastax/hopf_algebras/: __init__.py  bases.py  bck_trees.py  elements.py  forest_types.py  free_lie.py  gl.py  hopf_algebra_types.py  hopf_algebras.py  mkw.py  mkw_trees.py  print_rooted_trees.py  shuffle.py
stochastax/integrators/: __init__.py  integrator_types.py  log_ode.py  series.py
stochastax/manifolds/: __init__.py  manifold_types.py  manifolds.py  so3.py  spd.py  sphere.py
stochastax/vector_field_lifts/: __init__.py  bck_lift.py  butcher.py  combinatorics.py  gl_lift.py  lie_lift.py  mkw_lift.py  split_vector_fields.py  vector_field_lift_types.py
tests/: conftest.py  test_tensor_ops.py
tests/test_control_lifts/: bench_signatures.py  test_branched_signature.py  test_branched_signature_manual.py  test_log_signature.py  test_path_signature.py  test_signature_ops.py
tests/test_controls/: bench_controls.py  test_drivers.py
tests/test_hopf_algebras/: bench_hopf_algebras.py  test_bck_trees.py  test_exp_deg2.py  test_free_lie.py  test_mkw_trees.py  test_rooted_trees.py
tests/test_integrators/: bench_log_ode.py  conftest.py  test_bck_log_ode.py  test_log_ode.py  test_mkw_and_bck_log_ode.py  test_mkw_log_ode.py
tests/test_manifolds/: bench_retractions.py  bench_so3.py  bench_spd.py  test_so3.py  test_spd.py
tests/test_vector_field_lifts/: bench_vector_field_lifts.py  test_bck_lift.py  test_butcher.py  test_lie_lift.py  test_lyndon_brackets.py  test_mkw_lift.py
